welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
	if (vuBiscuit() == true) {
                     ^Program:13: error: not found: value vuBiscuit
	}else{vuBiscuit()=true
              ^